syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int64 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // error handling
    // this RPC will throw an exception if the sent number is negative
    // the error beign sent is of type INVALID_ARGUMENT 
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}